Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2007-03-12 Kimmo
 Remove unneeded include lines
  Src: DirDoc.cpp
 Remove unneeded initialization
  Src: CCPrompt.cpp
 PATCH: [ 1678676 ] Swedish translation of New Copy Confirmation dialog
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc

2007-03-11 Jan Hryz
 Czech translation - translation of "confirm copy" dialog
  Src/Languages/Czech/MergeCzech.rc

2007-03-08 Kimmo
 PATCH: [ 1664689 ] French translation (update2)
  Submitted by Jean-F Jolin
  Src/Languages/French: MergeFrench.rc
 Remove two unused functions, improve comments
  Src: DirActions.cpp
 BUG: [ 1670991 ] File panes lost focus after delete confirmation dialog
  Src: DirActions.cpp
 Fix comment about contributors file
  Src: AboutDlg.cpp
 PATCH: [ 1676802 ] Move compare options to DiffContext
  Src: ByteComparator.cpp ByteComparator.h CompareOptions.cpp CompareOptions.h
   DiffContext.cpp DiffContext.h DirDoc.cpp DirDoc.h FolderCmp.cpp

2007-03-07 Kimmo
 PATCH: [ 1675087 ] New copy confirmation dialog
  Src: DirActions.cpp FileActionScript.h Merge.dsp Merge.rc resource.h
  Src new files: ConfirmFolderCopyDlg.cpp ConfirmFolderCopyDlg.h
  Src/Languages/*: Merge*.rc

2007-03-07 Takashi
 PATCH: [ 1675211 ] Fix crash when hiding parent folder item on folder view
  Src/DirView.cpp

2007-03-06 Kimmo
 PATCH: [ 1673908 ] Update of Swedish translation for "View margins"
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc

2007-03-04 Kimmo
 PATCH: [ 1673082 ] Polish translation for WM CVS
  Submitted by dr_prozac
   Src/Languages/Polish: MergePolish.rc

2007-03-04 Tim
 BUG: [ 1668996 ] Two "Copy Right" buttons in Russian GUI.
  Src/Languages/Russian: MergeRussian.rc

2007-03-04 Kimmo
 PATCH: [ 1664689 ] French translation (update)
  Submitted by Jean-F Jolin
  Src/Languages/French: MergeFrench.rc

2007-02-27 WinMerge beta release 2.7.2 (revision 4137)
