@@ -2,6 +2,12 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2007-03-13 Kimmo
+ PATCH: [ 1679196 ] Cleanup logfile class usage
+  Src: DiffWrapper.cpp DirActions.cpp DirDoc.cpp DirScan.cpp FolderCmp.cpp MainFrm.cpp
+   Merge.cpp Merge.h MergeDoc.cpp Plugins.cpp StdAfx.cpp StdAfx.h
+  Src/Common: LogFile.cpp LogFile.h
+
 2007-03-12 Kimmo
  Remove unneeded include lines
   Src: DirDoc.cpp
